--- a/css/ipedidos.css
+++ b/css/ipedidos.css
@@ -93,7 +93,7 @@ body {
 .title-header, .icon-menu{display: inline-block; padding-left: 5%}
 .title-header h3{padding-left: 25%}
 .icon-more{display: inline-block; padding-right: 7%}
-.icon-more{float: right;}
+.icon-more, .alert-notification, .panel-heading span{float: right;}
 #breadcrumb{background-color: #40C4FF; }
 #breadcrumb div {text-align: center; color: #EEEEEE; cursor:pointer;}
 .selected{background-color: yellow; width: auto; height: 2px;}
@@ -102,4 +102,3 @@ body {
 .nav-pills{margin-top: 20%}
 #title-registrados{color: #757575}
 .card-pedido{background-color: #009688;}
-.form2{display: none};
