--- a/css/ipedidos.css
+++ b/css/ipedidos.css
@@ -102,3 +102,4 @@ body {
 .nav-pills{margin-top: 20%}
 #title-registrados{color: #757575}
 .card-pedido{background-color: #009688;}
+.title-vendorama{margin-bottom: 30px; margin-top: 80px;}
